Fix width issue on mobile

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -4,6 +4,12 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+html, body {
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     overflow-x: hidden;
     font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
